--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@style/LabelStyle"
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.TipCalculator"
         tools:targetApi="31">
